--- a/index.html
+++ b/index.html
@@ -2,15 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>A simple Three.JS App</title>
+    <title>richardsavagevoice.com</title>
   </head>
   <body>
     <header>
-      <h1>A simple three.js app</h1>
     </header>
 
     <main>
-      <div id="container3D"></div>
     </main>
 
     <script type="module" src="js/main.js"></script>
