--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
   <head>
     <meta charset="utf-8" />
     <title>richardsavagevoice.com</title>
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <header>
+
     </header>
 
     <main>
+      <div id="container3D"></div>
     </main>
 
     <script type="module" src="js/main.js"></script>
