--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-
-      <header>
-
+    <header>
+      <h1>A simple three.js app</h1>
     </header>
     
     <main>
